# bvhio

./: .flake8  .gitignore  CITATION.cff  LICENSE  README.md  a.bvh  b.bvh  bar.bvh  c.bvh  experiments.ipynb  file1.bvh  foo.bvh  pyproject.toml  readme.md  requirements.txt  test.bvh  test.ipynb  test.py
.github/workflows/: build_main.yml  build_preview.yml  publish_main.yml  publish_preview.yml
bvhio/: __init__.py  angles.py  bvh.py  parser.py  transform.py
bvhio/bvh/: BvhContainer.py
bvhio/lib/: Parser.py
bvhio/lib/bvh/: BvhContainer.py  BvhJoint.py  RootPose.py  __init__.py
bvhio/lib/hierarchy/: Joint.py  __init__.py
bvhio/lib/shared/: Pose.py
bvhio/shared/: __init__.py
bvhio/tests/: example.bvh  test_bvh.py  test_hierarchy.py  test_io.py  utils.py
transform/: __init__.py  euler.py  transform.py
