[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bvhio"
version = "1.4.4"
authors = [ { name="Wasserwecken", email="author@example.com" }, ]
description = "Read, write, edit and create .bvh files with hierarchical 3D transforms."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy',
    'PyGLM==2.7.1',
    'spatial-transform==1.2.13',
]

[project.urls]
"Homepage" = "https://github.com/Wasserwecken/bvhio"
"Bug Tracker" = "https://github.com/Wasserwecken/bvhio/issues"
