[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bvhio"
version = "1.5.2"
authors = [ { name="Wasserwecken", email="author@example.com" }, ]
description = "Read, write, edit and create .bvh files with hierarchical 3D transforms."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy',
    'PyGLM==2.8.2',
    'spatial-transform==1.3.1',
]

[project.urls]
"Homepage" = "https://github.com/Wasserwecken/bvhio"
"Bug Tracker" = "https://github.com/Wasserwecken/bvhio/issues"
